change how all works

--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
                 quizDiv.appendChild(questionDiv);
             });
             
-            window.quizData = data; // Store quiz data for later
+            window.quizData = data; // Store quiz data for checkAnswers function
         });
 
         function checkAnswers() {
