--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
     <p id="result"></p>
 
     <script>
-        fetch('questions.json')
+        fetch('JSON/python.json')
         .then(response => response.json())
         .then(data => {
             // Select 20 random questions
