--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         ////////////////////////////////////
         // Where you choses the JSON file //
         ////////////////////////////////////
-        fetch('JSON/python.json')
+        fetch('JSON/machine-learning.json')
         
         .then(response => response.json())
         .then(data => {
@@ -67,6 +67,8 @@
             });
             document.getElementById('result').textContent = `Your score is ${score} out of 20.`;
         }
+
+
     </script>
 </body>
 </html>
